# knowever

./: .env.example  .gitignore  README.md  build_mail.py  codex_consume.py  download_feed.py  email_template.html  process_feed.py  profile.example.yaml  prompt.md  pyproject.toml  rss.py  rss_download.py  rss_process.py  run.sh  see_all.py  send_digest.py
src/knowever/: __init__.py  cli.py  codex_consume.py  config.py  download_feed.py  emailing.py  logging_utils.py  mark_all.py  paths.py  process_feed.py  rss_download.py  rss_process.py  send_digest.py
