[project]
name = "knowever-rss-digest"
version = "0.1.0"
description = "Simple RSS downloader for Codex - fetches feeds into JSONL files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "feedparser",
    "PyYAML",
    "requests",
    "beautifulsoup4",
    "python-dotenv",
]

[project.scripts]
knowever = "knowever.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
